# air_quality_monitor

./: .gitignore  README.md
airq_sensor/: README.md  config_sensor_simulation.sh  install_ prerequisites.sh  spawn_sensors.sh
airq_sensor/src/: CMakeLists.txt  producer.cc
prometheus_setup/: avg_rules.rules  generate_prom_targets.py  install_prometheus.sh  prometheus-servers.yml  prometheus_targets.py  run_prom.sh  sensor-server.yml
prometheus_setup/example_json/: targets.json
sensor_simulation/: CMakeLists.txt  README.md  config_sensor_simulation.sh  generate_ports.sh  generate_targets.sh  install_gcc-6.sh  install_prometheus-cpp.sh  install_protobuf.sh  producer.cc
sensor_simulation/src/: util.cc  util.h
servers/: README.md  sensor_registry_server.py
servers/example_json/: prometheus_server.json  targets.json
